--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "wildfire/restapi",
-    "description": "PHP library to create rest APIs quickly",
+    "name": "wildfire/api",
+    "description": "JSON APIs for Tribe",
     "require": {
         "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
-            "Wildfire\\RestAPI\\": "src/"
+            "Wildfire\\Api\\": "src/"
         }
     }
 }
