naming to tribe

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
     "require": {
     	"tribe/core": "^4.0",
     	"tribe/auth": "^3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Tribe\\": "src/"
+        }
     }
 }
