--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "repositories": {
         "wildfire/core": {
             "type": "git",
-            "url": "https://github.com/wil-ldf-ire/core.git"
+            "url": "https://github.com/wil-ldf-ire/tribe-core.git"
         },
         "wildfire/auth": {
             "type": "git",
-            "url": "https://github.com/wil-ldf-ire/auth.git"
+            "url": "https://github.com/wil-ldf-ire/tribe-auth.git"
         }
     },
     "require": {
